@@ -1,5 +1,6 @@
 == Master (for 0.0.2)
   bin/quizgame raise error when _wts.yaml includes a float weight.
+  fix the bug when NaN occur with quit when no problem is answered.
 
 == Version 0.0.1
   bugfix
